# proyecto-is-201

./: .gitignore  CMakeLists.txt  REQUISITOS_INSTALACION.txt
.cache/clangd/index/: Alumno.cpp.0EC83F75C9C1F0EE.idx  Alumno.h.11A80F2EE9E916B2.idx  DatabaseManager.cpp.4EAAAF4E08AA5358.idx  DatabaseManager.h.07D273A650D6D9D5.idx  LoginWindow.cpp.C2AC0F50C19D0855.idx  LoginWindow.h.A9790DEF4382423E.idx  RegisterWindow.cpp.4B1FB29EDFE65B4C.idx  RegisterWindow.h.60A919EA45A5D6B1.idx  StudentWindow.cpp.DA423F9EC395A504.idx  StudentWindow.h.21F3AE901DE3A895.idx  Tutor.cpp.061E2FBA6475A93D.idx  Tutor.h.8F14668F9B5ECAFF.idx  TutorWindow.cpp.7621922E2E46D19C.idx  TutorWindow.h.8A541D5B025D0454.idx  UsuarioUCO.cpp.98312E34B776AB5B.idx  UsuarioUCO.h.35A5AF369E27A758.idx  main.cpp.8A77FB9341E6D2FA.idx  test_logic.cpp.3B1B6DD88F306F0A.idx
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/gui/: LoginWindow.cpp  LoginWindow.h  RegisterWindow.cpp  RegisterWindow.h  StudentWindow.cpp  StudentWindow.h  TutorWindow.cpp  TutorWindow.h
src/models/: Alumno.cpp  Alumno.h  Tutor.cpp  Tutor.h  UsuarioUCO.cpp  UsuarioUCO.h
tests/: CMakeLists.txt  LogicTests.cpp  main_test.cpp
